--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,18 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "ABCoptim"]
+	path = ABCoptim
+	url = https://github.com/gvegayon/abcoptim
+	shallow = true
+	registered = true
+[submodule "googlePublicData"]
+	path = googlePublicData
+	url = https://github.com/gvegayon/googlepublicdata
+	shallow = true
+	registered = true
+[submodule "rgexf"]
+	path = rgexf
+	url = https://github.com/gvegayon/rgexf
+	shallow = true
+	registered = true
