--- a/.gitmodules
+++ b/.gitmodules
@@ -1,13 +1,13 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
+	url = https://github.com/gvegayon/gvegayon.r-universe.dev
 	branch = HEAD
 [submodule "ABCoptim"]
 	path = ABCoptim
-	url = https://github.com/gvegayon/abcoptim
-[submodule "googlePublicData"]
-	path = googlePublicData
-	url = https://github.com/gvegayon/googlepublicdata
+	url = https://github.com/gvegayon/ABCoptim
+[submodule "imaginarycss"]
+	path = imaginarycss
+	url = https://github.com/gvegayon/imaginarycss
 [submodule "rgexf"]
 	path = rgexf
 	url = https://github.com/gvegayon/rgexf
